tests/semantic/fact_plus/fact_plus.err
Error: Argument in fact is not constant in file fact_plus.dl at line 10
F(1+a,"AA").
--^----------
1 errors generated, evaluation aborted
